wip: fixing issue at android api to mimific network gps changes
